fix: 장바구니 메뉴 추가 redis 저장 오류 개선
- 장바구니에 메뉴를 추가했을 때 해당 데이터가 바로 redis로 보내지지 않는 오류
- 로직을 개선해 axios.post 전에 메뉴 수량을 저장한 후 해당 데이터로 요청
- 수량을 반영해 redis로 넘겨주어 redis에서 저장

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -335,7 +335,7 @@
 
             menuData.forEach((menu, index) => {
                 const menuItem = `
-                    <div class="recommendation" onclick="addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}')">
+                    <div class="recommendation" onclick="addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}', ${1})">
                         <h2>${menu.food_name}</h2>
                         <div class="menu-image">
                             <img src="${menu.img_url}" alt="${menu.food_name} 이미지">
@@ -349,7 +349,7 @@
                     popupImage.src = menu.img_url;
                     popupName.textContent = menu.food_name;
                     popupPrice.textContent = `${menu.price}원`;
-                    popupContainer.setAttribute('onclick', `addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}')`);
+                    popupContainer.setAttribute('onclick', `addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}', ${1})`);
                     popupOverlay.style.display = 'flex';
                 } else {
                     // Inserting menu item into recommendations container
