fix: 장바구니 조회 오류 개선
- 페이지 첫 로딩 시 장바구니 조회 가능, 메뉴 추가 시 오류 발생: 전달하는 데이터의 형식이 상황에 따라 달라서 발생
- 데이터 형식을 통일시켜줌으로써 동작하도록 개선

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -371,7 +371,7 @@
         
         axios.get('/orders/cart/')
         .then(response => {
-            const cartData = response.data.context;
+            const cartData = response.data.cart_items;
             console.log("cartData >>>>>", cartData)
             console.log("cartData type >>>", typeof cartData)
             ? cartData
