--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name ="csrf-token" content="{{ csrf_token }}">
     <title>추천 메뉴 및 장바구니</title>
     <style>
         body {
