fix: 장바구니 삭제 후 추가 오류 개선
- 장바구니에서 메뉴를 삭제 후 다시 추가했을 때 기존 수량이 유지되는 오류
- 장바구니에서 메뉴를 삭제하는 로직을 수정해서 개선

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -324,7 +324,6 @@
     const popupName = document.getElementById('popup-name');
     const popupPrice = document.getElementById('popup-price');
     const closePopup = document.getElementById('closePopup');
-    const username = 
 
     document.addEventListener('DOMContentLoaded', function() {
     console.log("페이지 로딩 후 메뉴 조회, 장바구니 조회 >>> ")
@@ -372,11 +371,9 @@
         
         axios.get('/orders/cart/')
         .then(response => {
-            const cartData = response.data.cart_items;
+            const cartData = response.data.cart_items ? response.data.cart_items : {};
             console.log("cartData >>>>>", cartData)
             console.log("cartData type >>>", typeof cartData)
-            ? cartData
-            :{};
             updateCartDisplay(cartData);
         })
         .catch(error => {
