--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -223,7 +223,7 @@
                             console.log('서버 응답:', responseText);
                             localStorage.setItem('recommended_menu', JSON.stringify(recommended_menu));
                             localStorage.setItem('customer_message', responseText);
-                            window.location.href = '/orders/elder_menu/';
+                            // window.location.href = '/orders/elder_menu/';
                             console.log("customer_message>>>>>>>", responseText);
                             console.log("recommended_menu>>>>>>>", recommended_menu);
                         })
