feat: 장바구니 음성으로 수량 변경 기능 구현
- 음성으로 요청을 보냈을 때 장바구니 관련 요청일 경우, 메뉴와 변경 수량을 파악하여 반영
- 관련 프롬프트 수정, redis 저장/불러오기, 수정한 장바구니 내용 반영
- fix: 메뉴명 변수 수정

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -457,7 +457,8 @@ function startSpeechRecognition() {
                     console.log("recommended_menu>>>>>>>>>>>>>>>", recommended_menu)
                     displayRecommendations(recommended_menu, responseText);
                 } else {
-                    console.warn("Unexpected response data format:", response.data);
+                    refreshCart();
+                    // console.warn("Unexpected response data format:", response.data);
                 }
             })
             .catch(function (error) {
