chore: 리다이렉트 및 카메라 숨김
www 유무 상관없이 리다이렉트를 할 수 있도록 nginx.conf 수정하고 키오스크 처음 페이지에 얼굴인식 카메라부분을 숨김

--- a/orders/templates/orders/start_order.html
+++ b/orders/templates/orders/start_order.html
@@ -62,8 +62,9 @@
             font-size: 0.5em; /* "Place an order" 텍스트 크기 줄이기 */
         }
 
-        #video {
-            display: none; /* 웹캠 비디오 요소 숨기기 */
+        /* 웹캠과 캔버스를 감싸는 div 숨기기 */
+        .hidden-container {
+            display: none; /* 요소를 숨김 */
         }
     </style>
 </head>
@@ -91,10 +92,13 @@
     </form>
 </div>
 
-<!-- 얼굴을 인식할 비디오 요소 -->
-<video id="video" width="320" height="240" autoplay></video>
-<!-- 비디오 스트림을 캡처하여 얼굴 이미지를 표시할 캔버스 요소 -->
-<canvas id="canvas" width="320" height="240"></canvas>
+<!-- 웹캠과 캔버스를 감싸는 div -->
+<div class="hidden-container">
+    <!-- 얼굴을 인식할 비디오 요소 -->
+    <video id="video" width="320" height="240" autoplay></video>
+    <!-- 비디오 스트림을 캡처하여 얼굴 이미지를 표시할 캔버스 요소 -->
+    <canvas id="canvas" width="320" height="240"></canvas>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
