--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -46,12 +46,20 @@
 
         .mb-4,
         .my-4 {
-            margin-bottom: -2rem !important;
+            margin-bottom: 0rem !important;
+        }
+
+        .mt-5, .my-5 {
+            margin-top: 0.5rem !important;
+        }
+
+        .mt-3, .my-3 {
+            margin-top: 0rem !important;
         }
 
         .h3,
         h3 {
-            font-size: 2.75rem;
+            font-size: 2.5rem;
             margin: 20px;
         }
 
@@ -168,7 +176,7 @@
 
         .btn-custom {
             padding: 20px 0; /* 상하 padding은 20px로 유지하고 좌우 padding은 0으로 설정 */
-            font-size: 3rem;
+            font-size: 2.5rem;
             width: calc(50% - 47.5px); /* 50%에서 좌우 padding(47.5px)를 뺀 값 */
             background: #47a2ce;
         }
