feat: admin page custom
-customize할 템플릿 폴더를 새로 생성
-사이드바 메뉴들 쓰는 것만 남기고 삭제
-base.html에 파비콘 설정
-계정 정보를 가져오도록 설정
-계정 정보 옆에는 silver lining로고를 설정
-dashboard에 쓸 정보 가져오기까지 완료

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -358,7 +358,7 @@
 
             menuData.forEach((menu, index) => {
               const menuItem = `
-                    <div class="recommendation" onclick="addItem('${
+                    <div class="recommendation" onclick="addItem"('${
                       menu.food_name
                     }', ${menu.price}, '${menu.img_url}', ${1})">
                         <h2>${menu.food_name}</h2>
@@ -528,7 +528,7 @@
 
             menuData.forEach((menu, index) => {
               const menuItem = `
-                    <div class="recommendation" onclick="addItem('${menu.food_name}', ${menu.price}, '${menu.img_url}')">
+                    <div class="recommendation" onclick="addItem('${menu.food_name}', '${menu.price}', '${menu.img_url}')">
                         <h2>${menu.food_name}</h2>
                         <div class="menu-image">
                             <img src="${menu.img_url}" alt="${menu.food_name} 이미지">
