--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -154,21 +154,16 @@
         });
         
         window.addEventListener('load', function () {
-            console.log(">>>>>>>>>>>>> 실행");
             const welcomeMessage = "반갑습니다. 원하시는 메뉴를 추천해 드리겠습니다. 필요한 것이 있다면 말씀해주세요.";
             requestPermissions().then(() => {
                 speak(welcomeMessage, startSpeechRecognition);
             }).catch(error => {
-                console.error('권한 요청 실패:', error);
             });
         });
 
         const startButton = document.getElementById('startButton');
         const redirectButton = document.getElementById('redirectButton');
         const transcription = document.getElementById('transcription');
-
-
-
         
         function requestPermissions() {
             return new Promise((resolve, reject) => {
@@ -202,7 +197,7 @@
         }
 
         function startSpeechRecognition() {
-            console.log(">>>>>>>>>>>>> startSpeechRecognition");
+            console.log(">>>> 음성 인식 시작");
             if (!('webkitSpeechRecognition' in window)) {
                 alert("음성 인식이 지원되지 않는 브라우저입니다.");
             } else {
@@ -213,9 +208,7 @@
                     const transcript = event.results[0][0].transcript;
                     console.log("transcript>>>>>>>>>>>>>", transcript);
                     const csrfToken = getCsrfToken();
-                    console.log("csrf 탔는지 >>>>>>>>>");
-                    console.log("csrfToken>>>>>>>>>", csrfToken);
-
+                    
                     axios.post('/orders/aibot/', { inputText: transcript },
                         {
                             headers: {
@@ -229,8 +222,6 @@
                             localStorage.setItem('recommended_menu', JSON.stringify(recommended_menu));
                             localStorage.setItem('customer_message', responseText);
                             window.location.href = '/orders/elder_menu/';
-                            console.log("customer_message>>>>>>>", responseText);
-                            console.log("recommended_menu>>>>>>>", recommended_menu);
                         })
                         .catch(function (error) {
                             console.error('에러:', error);
@@ -248,6 +239,7 @@
         // speak 함수 실행 (특정 메시지를 발음하도록 수정 가능)
         speak("새로운 음성 입력을 받을 수 있습니다. 어떤 메뉴를 원하세요?", startSpeechRecognition);
         });
+
         redirectButton.addEventListener('click', function() {
         // 버튼 클릭 시 orders/templates/menu.html로 리다이렉트
         window.location.href = '/orders/menu/';
